[gd_scene load_steps=2 format=3 uid="uid://fdh0t2fbb17x"]

[ext_resource type="Script" path="res://Projects/Levels/PrototypeMenu/prototype_menu.gd" id="1_4chna"]

[node name="PrototypeMenu" type="CanvasLayer"]
script = ExtResource("1_4chna")

[node name="Level1" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -31.0
offset_top = -249.0
offset_right = 279.0
offset_bottom = -94.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50
text = "Level 1"

[node name="Level2" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -31.0
offset_top = -15.5
offset_right = 279.0
offset_bottom = 139.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50
text = "Level 2"

[node name="Level3" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -31.0
offset_top = 197.0
offset_right = 279.0
offset_bottom = 352.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50
text = "Level 3"

[connection signal="pressed" from="Level1" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="Level2" to="." method="_on_level_2_pressed"]
[connection signal="pressed" from="Level3" to="." method="_on_level_3_pressed"]
